--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -24,8 +24,8 @@
    },
    "outputs": [],
    "source": [
-    "# Run this to use from colab environment\n",
-    "#!pip install -q --upgrade git+https://github.com/karinvangarderen/tm10007_project.git"
+    " #Run this to use from colab environment\n",
+    "!pip install -q --upgrade git+https://github.com/karinvangarderen/tm10007_project.git"
    ]
   },
   {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -47,34 +47,53 @@
    },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "The number of samples: 855\n",
-      "The number of columns: 268\n"
+      "The number of samples: 167\nThe number of columns: 725\n              VOLUME_ET  VOLUME_NET  VOLUME_ED  VOLUME_TC  VOLUME_WT  \\\nID                                                                     \nTCGA-02-0006       1662         384      36268       2046      38314   \nTCGA-02-0009       4362        4349      15723       8711      24434   \nTCGA-02-0011      33404       48612      45798      82016     127814   \nTCGA-02-0027      12114        7587      34086      19701      53787   \nTCGA-02-0033      34538        7137      65653      41675     107328   \n...                 ...         ...        ...        ...        ...   \nTCGA-HT-8018       2093        8685      39142      10778      49920   \nTCGA-HT-8111       1929         437      54079       2366      56445   \nTCGA-HT-8114       8755      168606      11325     177361     188686   \nTCGA-HT-8563      11757        1012     138755      12769     151524   \nTCGA-HT-A61A          0       60154      76349      60154     136503   \n\n              VOLUME_BRAIN  VOLUME_ET_OVER_NET VOLUME_ET_OVER_ED  \\\nID                                                                 \nTCGA-02-0006       1469432            4.328125         0.0458255   \nTCGA-02-0009       1295721            1.002989          0.277428   \nTCGA-02-0011       1425843            0.687155          0.729377   \nTCGA-02-0027       1403429            1.596679          0.355395   \nTCGA-02-0033       1365237            4.839288          0.526069   \n...                    ...                 ...               ...   \nTCGA-HT-8018       1493262            0.240990      0.0534719738   \nTCGA-HT-8111       1821157            4.414188      0.0356700383   \nTCGA-HT-8114       1693971            0.051926      0.7730684327   \nTCGA-HT-8563       1605161           11.617589      0.0847320817   \nTCGA-HT-A61A       1476403            0.000000                 0   \n\n             VOLUME_NET_OVER_ED  VOLUME_ET_over_TC  ...  TGM_T_4  TGM_Cog_X_5  \\\nID                                                  ...                         \nTCGA-02-0006          0.0105878           0.812320  ...      NaN          NaN   \nTCGA-02-0009           0.276601           0.500750  ...      NaN          NaN   \nTCGA-02-0011            1.06144           0.407290  ...      NaN          NaN   \nTCGA-02-0027           0.222584           0.614890  ...      NaN          NaN   \nTCGA-02-0033           0.108708           0.828750  ...      NaN          NaN   \n...                         ...                ...  ...      ...          ...   \nTCGA-HT-8018       0.2218844208           0.194190  ...      NaN          NaN   \nTCGA-HT-8111       0.0080807707           0.815300  ...      NaN          NaN   \nTCGA-HT-8114      14.8879470199           0.049363  ...  5.99964     0.149851   \nTCGA-HT-8563       0.0072934309           0.920750  ...      NaN          NaN   \nTCGA-HT-A61A       0.7878819631           0.000000  ...      NaN          NaN   \n\n              TGM_Cog_Y_5  TGM_Cog_Z_5  TGM_T_5  TGM_Cog_X_6  TGM_Cog_Y_6  \\\nID                                                                          \nTCGA-02-0006          NaN          NaN      NaN          NaN          NaN   \nTCGA-02-0009          NaN          NaN      NaN          NaN          NaN   \nTCGA-02-0011          NaN          NaN      NaN          NaN          NaN   \nTCGA-02-0027          NaN          NaN      NaN          NaN          NaN   \nTCGA-02-0033          NaN          NaN      NaN          NaN          NaN   \n...                   ...          ...      ...          ...          ...   \nTCGA-HT-8018          NaN          NaN      NaN          NaN          NaN   \nTCGA-HT-8111          NaN          NaN      NaN          NaN          NaN   \nTCGA-HT-8114     0.130384     0.117081   13.434     0.143839      0.15564   \nTCGA-HT-8563          NaN          NaN      NaN          NaN          NaN   \nTCGA-HT-A61A          NaN          NaN      NaN          NaN          NaN   \n\n              TGM_Cog_Z_6  TGM_T_6  label  \nID                                         \nTCGA-02-0006          NaN      NaN    GBM  \nTCGA-02-0009          NaN      NaN    GBM  \nTCGA-02-0011          NaN      NaN    GBM  \nTCGA-02-0027          NaN      NaN    GBM  \nTCGA-02-0033          NaN      NaN    GBM  \n...                   ...      ...    ...  \nTCGA-HT-8018          NaN      NaN    LGG  \nTCGA-HT-8111          NaN      NaN    LGG  \nTCGA-HT-8114     0.140121  3.17204    LGG  \nTCGA-HT-8563          NaN      NaN    LGG  \nTCGA-HT-A61A          NaN      NaN    LGG  \n\n[167 rows x 725 columns]\n"
      ]
     }
    ],
    "source": [
     "# Data loading functions. Uncomment the one you want to use\n",
-    "from adni.load_data import load_data\n",
-    "#from brats.load_data import load_data\n",
+    "#from adni.load_data import load_data\n",
+    "from brats.load_data import load_data\n",
     "#from hn.load_data import load_data\n",
     "#from ecg.load_data import load_data\n",
+    "import numpy as np\n",
     "\n",
     "data = load_data()\n",
     "print(f'The number of samples: {len(data.index)}')\n",
     "print(f'The number of columns: {len(data.columns)}')\n",
-    "\n"
+    "\n",
+    "print(data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "KeyError",
+     "evalue": "\"None of [Index(['TGMCog_Y_5'], dtype='object')] are in the [columns]\"",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-9ceb9296ee90>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'TGMCog_Y_5'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0my\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'label'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#print(y)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2906\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2907\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2908\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_listlike_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2909\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2910\u001b[0m         \u001b[1;31m# take() does not accept boolean indexers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_get_listlike_indexer\u001b[1;34m(self, key, axis, raise_missing)\u001b[0m\n\u001b[0;32m   1252\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_indexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reindex_non_unique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1253\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1254\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_read_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mraise_missing\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mraise_missing\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1255\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1256\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_validate_read_indexer\u001b[1;34m(self, key, indexer, axis, raise_missing)\u001b[0m\n\u001b[0;32m   1296\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mmissing\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1297\u001b[0m                 \u001b[0maxis_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mobj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_axis_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1298\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"None of [{key}] are in the [{axis_name}]\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1299\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1300\u001b[0m             \u001b[1;31m# We (temporarily) allow for some missing keys with .loc, except in\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"None of [Index(['TGMCog_Y_5'], dtype='object')] are in the [columns]\""
+     ]
+    }
+   ],
    "source": [
-    "# test 1"
+    "X = np.array(data[['TGMCog_Y_5']])\n",
+    "y = np.array(data['label'])\n",
+    "#print(y)\n",
+    "print(X)"
    ]
   },
   {
@@ -126,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
