Some beauty changes

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -59,10 +59,7 @@
     "from sklearn.metrics import f1_score, average_precision_score, accuracy_score, recall_score\n",
     "import seaborn\n",
     "import matplotlib.pyplot as plt\n",
-    "from brats.load_data import load_data\n",
-    "# from SVM import SVM_algorithm\n",
-    "# from SVM import SVM_hyper\n",
-    "# from SVM import SVM_PCA"
+    "from brats.load_data import load_data"
    ],
    "cell_type": "code",
    "metadata": {
@@ -73,7 +70,7 @@
   },
   {
    "source": [
-    "## Defenition preprocessing\n",
+    "## Definition preprocessing\n",
     "\n",
     "All relevant preprocessing functions are processed below\n"
    ],
@@ -271,7 +268,7 @@
    "source": [
     "## Preprocessing of the raw data\n",
     "\n",
-    "The raw data is filtered based on NaN percentage. The boundry for features selection has been set so that the feature is present in 80% of the samples. Furthermore, the label are stored in a seperate array and or popped from the main dataframe. Also the parameters for different classifiers are set."
+    "The raw data is filtered based on NaN percentage. The boundary for feature selection has been set so that the feature is present in 80% of the samples. Furthermore, the labels are stored in a seperate array and popped from the main dataframe. Also the parameters for different classifiers are set."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -291,16 +288,16 @@
     "\n",
     "# Set hyperparameter window for three classifiers: KNN, RandomForest and Support Vector Machine\n",
     "\n",
-    "# KNN, Number of neighbors range from (1,3, ... 27, 29)\n",
+    "# KNN, Number of neighbors range from (1, 3, ... 27, 29)\n",
     "parameters_knn = {\"n_neighbors\": list(range(1, 30, 2))}\n",
     "knn = neighbors.KNeighborsClassifier()\n",
     "\n",
-    "# RF, Number of trees range from (1,6, ... 46, 51)\n",
+    "# RF, Number of trees range from (1, 6, ... 46, 51)\n",
     "parameters_RF = {\"n_estimators\": list(range(1, 52, 5))}\n",
     "RF = RandomForestClassifier()\n",
     "\n",
-    "# SVM, Number of neighbors range from (1,6, ... 27, 29)\n",
-    "parameters_svm = {\"C\": [0.4, 0.6, 0.8, 1, 1.2, 1.4], \"coef0\": list(range(1, 27, 5))}\n",
+    "# SVM, with different C ranging from (0.4, ..., 1.4) and coef0 ranging from (1, 6, ..., 26, 31)\n",
+    "parameters_svm = {\"C\": [0.4, 0.6, 0.8, 1, 1.2, 1.4], \"coef0\": list(range(1, 32, 5))}\n",
     "svm = SVC(probability=True, gamma='scale', kernel='poly')"
    ]
   },
