--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "\n",
     "def dropnan(data, threshold):\n",
-    "    '''First of all, cetrain strings and values in the dataset are turned into NaN.\n",
+    "    '''First of all, certain strings and values in the dataset are turned into NaN.\n",
     "    With this function, features with more than a certain amount of NaN values will be\n",
     "    excluded from the dataset. The inputs are the contaminated dataset and the\n",
     "    threshold value. The output is the cleaned dataset. '''\n",
@@ -124,7 +124,7 @@
     "\n",
     "def pca_algorithm(x_train_scaled, x_test_scaled):\n",
     "    '''This algoritm transforms the feature data to 10 Principal Component Axis.\n",
-    "    The PCA is fitted to on the train set and transformed into the testset, to prevent\n",
+    "    The PCA is fitted on the train set and applied on the testset, to prevent\n",
     "    training on the test set.\n",
     "    '''\n",
     "    pca = decomposition.PCA(n_components=10)\n",
@@ -168,7 +168,7 @@
     "def build_model_and_results(data, labels, classifier, parameters):\n",
     "    '''This function splits the data and finds the best hyperparameter per split.\n",
     "    This hyperparameter is applied in a classification on the test set in 10 folds. The accuracy,\n",
-    "    F1 score, precision, recall, confusion matrices, true positives and aucs are returned'''\n",
+    "    F1 score, precision, recall, confusion matrices, true positives and aucs are returned.'''\n",
     "    accuracies = []\n",
     "    f1_metrics = []\n",
     "    precision = []\n",
