--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -34,9 +34,6 @@
    "source": [
     "## Data loading and cleaning\n",
     "\n",
-    "Below are functions to load the dataset of your choice. After that, it is all up to you to create and evaluate a classification method. Beware, there may be missing values in these datasets. Good luck!\n",
-    "\n",
-    "\n",
     "This is a machine learning tool for the distinction of LGG and GBM, based on\n",
     "radiomic features.\n"
    ]
@@ -72,7 +69,7 @@
    "source": [
     "## Definition preprocessing\n",
     "\n",
-    "All relevant preprocessing functions are processed below\n"
+    "All relevant preprocessing functions are processed below.\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -166,8 +163,9 @@
    "outputs": [],
    "source": [
     "def build_model_and_results(data, labels, classifier, parameters):\n",
-    "    '''This function splits the data and finds the best hyperparameter per split.\n",
-    "    This hyperparameter is applied in a classification on the test set in 10 folds. The accuracy,\n",
+    "    '''This function splits the data and finds the best hyperparameter per split. This hyperparameter is applied \n",
+    "    in a classification on the test set in 10 folds. The inputs are the data,\n",
+    "    labels, classifier you want to use and the hyperparameters to tune for this classifier. The mean accuracy,\n",
     "    F1 score, precision, recall, confusion matrices, true positives and aucs are returned.'''\n",
     "    accuracies = []\n",
     "    f1_metrics = []\n",
